@@ -71,17 +71,14 @@ class Form(field.Field):
 
        Default options exist even if ``ajax_options`` is not provided.
        By default, ``target`` points at the DOM node representing the
-       form and and ``replaceTarget`` is ``true``. A successhandler calls
-       the deform_ajaxify method that will ajaxify the newly written form
-       again. the deform_ajaxify method is in the global namespace, it
-       requires a oid, and accepts a method. If it receives a method,
-       it will call the method after it ajaxified the form itself.
-       If you pass these values in ``ajax_options``, the defaults will
-       be overridden.
-       If you want to override the success handler, don't forget to
-       call the original deform_ajaxify successhandler, and pass your
-       own method as an argument. Else, subsequent form submissions
-       won't be submitted via AJAX.
+       form and and ``replaceTarget`` is ``true``.
+
+       A successhandler calls the ``deform.processCallbacks`` method
+       that will ajaxify the newly written form again.  If you pass
+       these values in ``ajax_options``, the defaults will be
+       overridden.  If you want to override the success handler, don't
+       forget to call ``deform.processCallbacks``, otherwise
+       subsequent form submissions won't be submitted via AJAX.
 
        This option has no effect when ``use_ajax`` is False.
 
